; ModuleID = '/home/carl/AnghaBench/jerryscript/targets/curie_bsp/jerry_app/quark/extr_main.c_jerry_resolve_error.c'
source_filename = "/home/carl/AnghaBench/jerryscript/targets/curie_bsp/jerry_app/quark/extr_main.c_jerry_resolve_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"Script Error: unhandled exception: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jerry_resolve_error(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i64 @jerry_value_is_error(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %33

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @jerry_get_value_from_error(i32 %11, i32 1)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @jerry_value_to_string(i32 %13)
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i64 @jerry_get_utf8_string_size(i32 %15)
  store i64 %16, i64* %4, align 8
  %17 = load i64, i64* %4, align 8
  %18 = call i64 @balloc(i64 %17, i32* null)
  %19 = inttoptr i64 %18 to i64*
  store i64* %19, i64** %5, align 8
  %20 = load i32, i32* %3, align 4
  %21 = load i64*, i64** %5, align 8
  %22 = load i64, i64* %4, align 8
  %23 = call i64 @jerry_string_to_utf8_char_buffer(i32 %20, i64* %21, i64 %22)
  store i64 %23, i64* %6, align 8
  %24 = load i64*, i64** %5, align 8
  %25 = load i64, i64* %6, align 8
  %26 = getelementptr inbounds i64, i64* %24, i64 %25
  store i64 0, i64* %26, align 8
  %27 = load i64*, i64** %5, align 8
  %28 = call i32 @printk(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i64* %27)
  %29 = load i64*, i64** %5, align 8
  %30 = call i32 @bfree(i64* %29)
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @jerry_release_value(i32 %31)
  br label %33

33:                                               ; preds = %10, %1
  ret void
}

declare dso_local i64 @jerry_value_is_error(i32) #1

declare dso_local i32 @jerry_get_value_from_error(i32, i32) #1

declare dso_local i32 @jerry_value_to_string(i32) #1

declare dso_local i64 @jerry_get_utf8_string_size(i32) #1

declare dso_local i64 @balloc(i64, i32*) #1

declare dso_local i64 @jerry_string_to_utf8_char_buffer(i32, i64*, i64) #1

declare dso_local i32 @printk(i8*, i64*) #1

declare dso_local i32 @bfree(i64*) #1

declare dso_local i32 @jerry_release_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
